--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://inanebbs.github.io",
+  "homepage": "https://inanebbs.github.io/github.io",
   "name": "salesgpt-presentation",
   "version": "0.1.0",
   "private": true,
